--- a/haberler.html
+++ b/haberler.html
@@ -55,28 +55,6 @@
     </nav>
 </section>
 
-<!-- Hero Section -->
-<section id="center" class="clearfix center_blog">
-    <div class="container">
-        <div class="row">
-            <div class="center_blog_1 clearfix">
-                <div class="col-sm-6">
-                    <div class="center_blog_1l clearfix">
-                        <h3 class="mgt">Haberler & Duyurular</h3>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="center_blog_1r text-right clearfix">
-                        <ul class="mgt">
-                            <li><a href="index.html" style="color:#fff;">ANA SAYFA</a></li>
-                            <li class="border_none" style="color:#FFD700;"> HABERLER</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- News Section -->
 <section id="blog_page">
@@ -95,7 +73,6 @@
                                 <h2>Yeni Sezon Hazırlıkları Tam Gaz Devam Ediyor!</h2>
                                 <p>24 Erzincanspor, TFF 2. Lig'deki yeni sezon hazırlıklarına kaldığı yerden devam ediyor. Teknik direktör Mustafa Reşit Akçay yönetiminde çalışmalarını sürdüren takımımız, lige en iyi şekilde hazırlanmak için yoğun tempo çalışıyor.</p>
                                 <p><i class="fa fa-calendar"></i> 04 Aralık 2024</p>
-                                <a href="haber-detay.html?id=1?id=1" class="button">DEVAMINI OKU <i class="fa fa-chevron-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -108,13 +85,13 @@
         <div class="row news-grid">
             <div class="col-sm-3">
                 <div class="blog_page_1i clearfix">
-                    <a href="haber-detay.html?id=1?id=1"><img src="img/71.png" alt="Haber" class="iw"></a>
+                    <a href="haber-detay.html?id=1"><img src="img/71.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=1?id=1">Yeni Sezon Formaları Satışta!</a></h3>
+                        <h3 class="mgt">Yeni Sezon Formaları Satışta!</h3>
                         <p>2024-2025 sezonu resmi formalarımız mağazamızda satışa sunulmuştur...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 04 ARA 2024</li>
-                            <li><a class="bold" href="#">DUYURU</a></li>
+                            <li><span class="bold">DUYURU</span></li>
                         </ul>
                     </div>
                 </div>
@@ -123,11 +100,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=2"><img src="img/72.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=2">Hafta Sonu Maç Programı</a></h3>
+                        <h3 class="mgt">Hafta Sonu Maç Programı</h3>
                         <p>TFF 2. Lig 15. hafta karşılaşmamız bu Cumartesi günü oynanacak...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 02 ARA 2024</li>
-                            <li><a class="bold" href="#">MAÇ</a></li>
+                            <li><span class="bold">MAÇ</span></li>
                         </ul>
                     </div>
                 </div>
@@ -136,11 +113,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=3"><img src="img/73.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=3">Transfer Dönemi Hazırlıkları</a></h3>
+                        <h3 class="mgt">Transfer Dönemi Hazırlıkları</h3>
                         <p>Ocak ayı transfer dönemi için kulübümüz çalışmalarına başladı...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 30 KAS 2024</li>
-                            <li><a class="bold" href="#">TRANSFER</a></li>
+                            <li><span class="bold">TRANSFER</span></li>
                         </ul>
                     </div>
                 </div>
@@ -149,11 +126,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=4"><img src="img/74.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=4">Altyapı Seçmeleri Başlıyor</a></h3>
+                        <h3 class="mgt">Altyapı Seçmeleri Başlıyor</h3>
                         <p>U15 ve U17 kategorilerinde altyapı seçmelerimiz 5 Aralık'ta başlıyor...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 28 KAS 2024</li>
-                            <li><a class="bold" href="#">DUYURU</a></li>
+                            <li><span class="bold">DUYURU</span></li>
                         </ul>
                     </div>
                 </div>
@@ -163,11 +140,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=5"><img src="img/75.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=5">Kombine Kart Satışları</a></h3>
+                        <h3 class="mgt">Kombine Kart Satışları</h3>
                         <p>Sezon boyunca tüm iç saha maçlarını izleyebileceğiniz kombine kartlar...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 25 KAS 2024</li>
-                            <li><a class="bold" href="#">DUYURU</a></li>
+                            <li><span class="bold">DUYURU</span></li>
                         </ul>
                     </div>
                 </div>
@@ -176,11 +153,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=6"><img src="img/39.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=6">Başkanımızdan Açıklama</a></h3>
+                        <h3 class="mgt">Başkanımızdan Açıklama</h3>
                         <p>Kulüp başkanımız sezonun ilk yarısını değerlendirdi...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 22 KAS 2024</li>
-                            <li><a class="bold" href="#">HABER</a></li>
+                            <li><span class="bold">HABER</span></li>
                         </ul>
                     </div>
                 </div>
@@ -189,11 +166,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=7"><img src="img/40.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=7">Deplasman Galibiyeti</a></h3>
+                        <h3 class="mgt">Deplasman Galibiyeti</h3>
                         <p>Takımımız deplasmanda 2-1'lik skorla galip geldi...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 20 KAS 2024</li>
-                            <li><a class="bold" href="#">MAÇ</a></li>
+                            <li><span class="bold">MAÇ</span></li>
                         </ul>
                     </div>
                 </div>
@@ -202,11 +179,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=8"><img src="img/41.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=8">Yeni Sponsor Anlaşması</a></h3>
+                        <h3 class="mgt">Yeni Sponsor Anlaşması</h3>
                         <p>Kulübümüz yeni sponsor ile anlaşma imzaladı...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 18 KAS 2024</li>
-                            <li><a class="bold" href="#">HABER</a></li>
+                            <li><span class="bold">HABER</span></li>
                         </ul>
                     </div>
                 </div>
@@ -216,11 +193,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=9"><img src="img/42.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=9">İç Saha Zaferi</a></h3>
+                        <h3 class="mgt">İç Saha Zaferi</h3>
                         <p>Yeni Erzincan Stadyumu'nda oynanan maçta 3-0 galip geldik...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 15 KAS 2024</li>
-                            <li><a class="bold" href="#">MAÇ</a></li>
+                            <li><span class="bold">MAÇ</span></li>
                         </ul>
                     </div>
                 </div>
@@ -229,11 +206,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=10"><img src="img/43.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=10">Genç Yetenek Transferi</a></h3>
+                        <h3 class="mgt">Genç Yetenek Transferi</h3>
                         <p>Altyapımızdan yetişen genç yetenek A takıma transfer oldu...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 12 KAS 2024</li>
-                            <li><a class="bold" href="#">TRANSFER</a></li>
+                            <li><span class="bold">TRANSFER</span></li>
                         </ul>
                     </div>
                 </div>
@@ -242,11 +219,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=11"><img src="img/44.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=11">Taraftar Etkinliği</a></h3>
+                        <h3 class="mgt">Taraftar Etkinliği</h3>
                         <p>Taraftarlarımızla bir araya geldiğimiz özel etkinlik düzenlendi...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 10 KAS 2024</li>
-                            <li><a class="bold" href="#">ETKİNLİK</a></li>
+                            <li><span class="bold">ETKİNLİK</span></li>
                         </ul>
                     </div>
                 </div>
@@ -255,11 +232,11 @@
                 <div class="blog_page_1i clearfix">
                     <a href="haber-detay.html?id=12"><img src="img/45.png" alt="Haber" class="iw"></a>
                     <div class="blog_page_1ii clearfix">
-                        <h3 class="mgt"><a class="col_1" href="haber-detay.html?id=12">Antrenman Kampı</a></h3>
+                        <h3 class="mgt">Antrenman Kampı</h3>
                         <p>Takımımız yoğun antrenman kampı programına başladı...</p>
                         <ul>
                             <li><i class="fa fa-calendar-o"></i> 08 KAS 2024</li>
-                            <li><a class="bold" href="#">HABER</a></li>
+                            <li><span class="bold">HABER</span></li>
                         </ul>
                     </div>
                 </div>
